--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ArrowPanel">
+        android:theme="@style/Theme.com.mahdikh.vision.arrowpanel.widget.ArrowPanel">
         <activity
             android:name=".MainActivity"
             android:exported="true">
