--- a/arrowpanel/build.gradle
+++ b/arrowpanel/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 def LIB_GROUP_ID = 'com.mahdikh.vision'
 def LIB_ARTIFACT_ID = 'arrowpanel'
-def LIB_VERSION = '1.0.0'
+def LIB_VERSION = '1.0.1'
 
 android {
     compileSdk 30
@@ -15,7 +15,7 @@ android {
         minSdk 21
         targetSdk 30
         versionCode 1
-        versionName "1.0"
+        versionName LIB_VERSION
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
